crates/deadline-cli/tests/snapshots/cli_manifest__manifest_upload_nonexistent_file_exits_with_error.snap
---
source: crates/deadline-cli/tests/cli_manifest.rs
assertion_line: 225
info:
  program: deadline
  args:
    - manifest
    - upload
    - /nonexistent/manifest.file
    - "--s3-cas-uri"
    - "s3://bucket/prefix"
    - "--profile"
    - test
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61444"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61444"
    AWS_ENDPOINT_URL_STS: "http://localhost:61444"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpgpM21d/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpgpM21d
---
success: false
exit_code: 1
----- stdout -----
Specified manifest /nonexistent/manifest.file does not exist. 

----- stderr -----
